--- a/2.html
+++ b/2.html
@@ -20,7 +20,7 @@
     </div>
 <h2 style="text-align:center">Today's Diary</h2>
 <p style="text-align:center">
-  오늘 나는 자바 스크립트를 좀 공부하였고, HTML/CSS 공부를 위한 책을 빌렸으며 나만의 웹페이지를 위한 도메인을 구매하였다. 아이피 주소 어쩌구 막 해서 이제 외부에서도 내 페이지가 연결이 된다. 도메인 비용 생각보다 비싸다. 나도 돈을 많이 벌어야겠다고 생각했다. 그리고 공부할게 정말 많다고 느끼는 하루였다.
+  I will eat my lunch.
 </p>
 </body>
 </html>
